--- a/src/layout/index.css
+++ b/src/layout/index.css
@@ -11,6 +11,6 @@
 }
 
 body{
-    background-color: #F5F5F5;
+    background-color: rgb(241 245 249 );
     font-family: 'Noto Sans', sans-serif;
 }
